Lint index script and template

--- a/generators/app/templates/_element.html
+++ b/generators/app/templates/_element.html
@@ -16,7 +16,7 @@
 import '@dhi/dhi-common-ui-components/src/dhi-shared-styles/dhi-shared-styles.html';
 
 /**
- * # <%= elementName %> element
+ * <%= elementName %> element
  * <%= elementDescription %>.
  *
  * @customElement
@@ -24,7 +24,7 @@ import '@dhi/dhi-common-ui-components/src/dhi-shared-styles/dhi-shared-styles.ht
  */
 
 class <%= elementClassName %> extends Polymer.Element {
-  static get is() { return '<%= elementName %>'; }
+  static get is () { return '<%= elementName %>'; }
 
   static get properties () {
     return {};
